04_kuberntes_deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi-app
  ports:
    - name: http
      port: 8000        # stable Service port
      targetPort: 8000  # Pod’s containerPort
  type: NodePort        # good for Minikube; use LoadBalancer in cloud
